set up module testing
added testing data for inputs and expected outputs based on original matlab package.

--- a/doc/demo_usm_entropy.ipynb
+++ b/doc/demo_usm_entropy.ipynb
@@ -292,21 +292,21 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'usm_make'",
+     "evalue": "No module named 'pyusm'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-8545396042a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0musm_make\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0musm_entropy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'usm_make'"
+      "\u001b[1;32m<ipython-input-1-d9825f98e39f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpyusm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpyusm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0musm_entropy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyusm'"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "from pathlib import Path\n",
-    "import usm_make\n",
-    "import usm_entropy"
+    "import pyusm\n",
+    "from pyusm import usm_entropy"
    ]
   },
   {
@@ -375,7 +375,7 @@
     {
      "data": {
       "text/plain": [
-       "WindowsPath('C:/Users/Wuestney/Documents/GitHub/pyusm/demo_files')"
+       "WindowsPath('C:/Users/Wuestney/Documents/GitHub/pyusm/doc/demo_files')"
       ]
      },
      "execution_count": 2,
@@ -563,6 +563,158 @@
     "$$\n",
     "\n",
     "Where the left side of the equations are the corresponding graph asyptote equations in [3](#3)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "eced8080",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2000"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "matlab = []\n",
+    "py = []\n",
+    "with open(demo_files/'cgr_MC0_pymatcompare-2020-06-02.csv', 'r', encoding='utf-8-sig') as fhand:\n",
+    "    reader = csv.DictReader(fhand, dialect='excel')\n",
+    "    for row in reader:\n",
+    "        matlab.append([row['Column1'], row['Column2'], row['Column3'], row['Column4']])\n",
+    "        py.append([row['Column5'], row['Column6'], row['Column7'], row['Column8']])\n",
+    "with open(demo_files/'og_MC0_coords.csv', 'w') as fwrite:\n",
+    "    writer = csv.writer(fwrite)\n",
+    "    writer.writerows(matlab)\n",
+    "with open(demo_files/'pyusm_MC0_coords_2020-06-02.csv', 'w') as fwrite:\n",
+    "    writer = csv.writer(fwrite)\n",
+    "    writer.writerows(matlab)\n",
+    "    \n",
+    "mc0 = np.genfromtxt(demo_files/'og_MC0_coords.csv', delimiter=',')\n",
+    "mc0py = np.genfromtxt(demo_files/'pyusm_MC0_coords_2020-06-02.csv', delimiter=',')\n",
+    "len(mc0py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "8620ded2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[('R1.txt', 'renyi2usm_AA.rn2'), ('rand.txt', 'renyi2usm_alea1c.rn2'), ('m5.txt', 'renyi2usm_alea2c.rn2'), ('m7e.txt', 'renyi2usm_alea3c.rn2'), ('m4.txt', 'renyi2usm_ATCG20.rn2'), ('R5.txt', 'renyi2usm_ATCGA.rn2'), ('m3.txt', 'renyi2usm_ATCx.rn2'), ('Es.txt', 'renyi2usm_Es.seq.rn2'), ('MC0.txt', 'renyi2usm_M0.rn2'), ('MC1.txt', 'renyi2usm_MC91.seq.rn2')]\""
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seqs = ['R1', 'rand', 'm5', 'm7e', 'm4', 'R5', 'm3', 'Es', 'MC0', 'MC1']\n",
+    "seqfiles = [seq + '.txt' for seq in seqs]\n",
+    "paths = list(Path(r'C:\\Users\\Wuestney\\Documents\\GitHub\\pyusm\\pyusm\\tests\\expected_output').glob('*.rn2'))\n",
+    "renyifiles = [path.name for path in paths]\n",
+    "filerelat = list(zip(seqfiles, renyifiles))\n",
+    "repr(filerelat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "40b13f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['1.000000e-10', '-4.09740709268997776e+01'],\n",
+       " ['1.778279e-10', '-3.98231989820569652e+01'],\n",
+       " ['3.162278e-10', '-3.86723220182710676e+01'],\n",
+       " ['5.623413e-10', '-3.75214499713380505e+01'],\n",
+       " ['1.000000e-09', '-3.63705741437514547e+01'],\n",
+       " ['1.778279e-09', '-3.52196995873220473e+01'],\n",
+       " ['3.162278e-09', '-3.40688262956174412e+01'],\n",
+       " ['5.623413e-09', '-3.29179492317678211e+01'],\n",
+       " ['1.000000e-08', '-3.17670770786117984e+01'],\n",
+       " ['1.778279e-08', '-3.06161999112846566e+01'],\n",
+       " ['3.162278e-08', '-2.94653261463822886e+01'],\n",
+       " ['5.623413e-08', '-2.83144512064695313e+01'],\n",
+       " ['1.000000e-07', '-2.71635745661599515e+01'],\n",
+       " ['1.778279e-07', '-2.60127017076233003e+01'],\n",
+       " ['3.162278e-07', '-2.48618237114405609e+01'],\n",
+       " ['5.623413e-07', '-2.37109504608230530e+01'],\n",
+       " ['1.000000e-06', '-2.25600738448022184e+01'],\n",
+       " ['1.778279e-06', '-2.14091979577933138e+01'],\n",
+       " ['3.162278e-06', '-2.02583238564345827e+01'],\n",
+       " ['5.623413e-06', '-1.91074456291656354e+01'],\n",
+       " ['1.000000e-05', '-1.79565724025536824e+01'],\n",
+       " ['1.778279e-05', '-1.68056943615971370e+01'],\n",
+       " ['3.162278e-05', '-1.56548192904731582e+01'],\n",
+       " ['5.623413e-05', '-1.45039435918118791e+01'],\n",
+       " ['1.000000e-04', '-1.33530656840902484e+01'],\n",
+       " ['1.778279e-04', '-1.22021918887957490e+01'],\n",
+       " ['3.162278e-04', '-1.10513128959152347e+01'],\n",
+       " ['5.623413e-04', '-9.90043842254380024e+00'],\n",
+       " ['1.000000e-03', '-8.74956103471745550e+00'],\n",
+       " ['1.778279e-03', '-7.59868382705209733e+00'],\n",
+       " ['3.162278e-03', '-6.44780890177324117e+00'],\n",
+       " ['5.623413e-03', '-5.29692954507133251e+00'],\n",
+       " ['1.000000e-02', '-4.14605521901560081e+00'],\n",
+       " ['1.778279e-02', '-2.99517631795371297e+00'],\n",
+       " ['3.162278e-02', '-1.84429950619040062e+00'],\n",
+       " ['5.623413e-02', '-6.93411534356468628e-01'],\n",
+       " ['1.000000e-01', '4.57538249168731426e-01'],\n",
+       " ['1.778279e-01', '1.60857983085374223e+00'],\n",
+       " ['3.162278e-01', '2.75970700559035098e+00'],\n",
+       " ['5.623413e-01', '3.91089757457050125e+00'],\n",
+       " ['1', '5.06212966657647456e+00'],\n",
+       " ['1.778279e+00', '6.21338718262572609e+00'],\n",
+       " ['3.162278e+00', '7.36465969339561610e+00'],\n",
+       " ['5.623413e+00', '8.51594086477294887e+00'],\n",
+       " ['10', '9.66722698003950676e+00'],\n",
+       " ['1.778279e+01', '1.08185158990140682e+01'],\n",
+       " ['3.162278e+01', '1.19698064021244015e+01'],\n",
+       " ['5.623413e+01', '1.31210977984380914e+01'],\n",
+       " ['100', '1.42723896977905245e+01']]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = paths[0]\n",
+    "def parse_rn2_file(rn2file):\n",
+    "    with open(rn2file, 'r') as fhand:\n",
+    "        lines = fhand.readlines()\n",
+    "    rn2array = []\n",
+    "    row = 0\n",
+    "    for line in lines:\n",
+    "        if row < 2:\n",
+    "            row += 1\n",
+    "            continue\n",
+    "        else:\n",
+    "            row += 1\n",
+    "            line = line.rstrip().split('\\t')\n",
+    "            #print(line)\n",
+    "            rn2array.append([line[0].strip(), line[1].strip()])\n",
+    "    return rn2array\n",
+    "rn2 = parse_rn2_file(f)\n",
+    "rn2"
    ]
   },
   {
