Update doc source files

--- a/doc/demo_usm.ipynb
+++ b/doc/demo_usm.ipynb
@@ -558,7 +558,7 @@
    "source": [
     "> Notice the same subquadrant, highlighted in pink, contains the CGR coordinate of the last symbol of both 'a' and 'b'. The side of the subquadrant is length $2^{-3} = 0.125$ which is in line with the length of the suffix shared by 'a' and 'b', which is 3 symbols long.  \n",
     "   \n",
-    "> In fact, every coordinate plotted in this subquadrant corresponds to a sequence/subsequence with the suffix 'GGA'. And every subquadrant of this size contains coordinates which share suffixes of length 3. The smaller the subquadrant the longer the suffix will be that all coordinates in that subquadrant share. Which leads to the next two properties of CGRs. "
+    "> In fact, every coordinate plotted in this subquadrant corresponds to a sequence/subsequence with the suffix 'GGA'. And every subquadrant of this size contains coordinates which share suffixes of length 3. The smaller the subquadrant the longer the suffix will be that all coordinates in that subquadrant share. Which leads to the next few properties of CGRs. "
    ]
   },
   {
@@ -566,8 +566,8 @@
    "id": "8a134841",
    "metadata": {},
    "source": [
-    "2. Euclidean distance between any two points does not indicate nearness within the parent sequence but rather the length of a shared prefix. \n",
-    "3. The CGR map functions as a generalization of a Markov Chain Transition Matrix [8](#8), since the density of coordinates in any region of the map corresponds with the frequency of the k-gram associated with that region. This property was proven by Almeida et al. in [8](#) and they showed that in fact a Markov Chain transition matrix is a special case of the CGR.\n",
+    "2. Euclidean distance between any two points does not indicate nearness within the parent sequence but rather the length of a shared suffix. \n",
+    "3. The CGR map functions as a generalization of a Markov Chain Transition Matrix [8](#8), since the density of coordinates in any region of the map corresponds with the frequency of the k-gram associated with that region. This property was proven by Almeida et al. in [8](#8) and they showed that in fact a Markov Chain transition matrix is a special case of the CGR.\n",
     "4. The CGR map depicts all k-gram frequencies, for all k > 0, simultaneously.\n",
     "5. A perfectly random sequence will fill the CGR space evenly [1](#1).\n",
     "6. For any k-gram missing in the sequence, the subquadrant for that k-gram will be empty [1](#1). "
