--- a/doc/demo_usm_entropy.ipynb
+++ b/doc/demo_usm_entropy.ipynb
@@ -48,7 +48,7 @@
     "<a id='Intro'></a>\n",
     "## Intro and review\n",
     "\n",
-    "Universal Sequence Maps (USM) [1](#1) are a generalized version of the CGR maps first introduced by Jeffrey [2](#2) and they function as generalized order-free Markov transition matrices of symbolic sequences. This property in particular, allows for us to compute a generalized entropy estimate of the sequence based on the density of USM coordinates themselves. For more background on USM see the notebook demonstration ['demo_usm_make' ](#link to github url). Vinga and Almeida  introduced a continuous quadratic Renyi entropy of the USM of DNA sequences in [3](#3) which demonstrated promising discriminatory power. We build off of their work by implementing their algorithms in python and generalizing their entropy measure to *d*-dimensional USM. Proofs of the generalized equations are included in the sections below. In many aspects the usm_entropy module uses the original javascript and matlab toolkit (found at the github repository [usm.github.com](https://github.com/usm/usm.github.com.git)) as a template, however, we make notable deviations from the original algorithms in order to implement the generalized equations and to be more pythonic. "
+    "Universal Sequence Maps (USM) [1](#1) are a generalized version of the CGR maps first introduced by Jeffrey [2](#2) and they function as generalized order-free Markov transition matrices of symbolic sequences. This property in particular, allows for us to compute a generalized entropy estimate of the sequence based on the density of USM coordinates themselves. For more background on USM see the notebook demonstration ['demo_usm_make' ](demo_usm.ipynb). Vinga and Almeida  introduced a continuous quadratic Renyi entropy of the USM of DNA sequences in [3](#3) which demonstrated promising discriminatory power. We build off of their work by implementing their algorithms in python and generalizing their entropy measure to *d*-dimensional USM. Proofs of the generalized equations are included in the sections below. In many aspects the usm_entropy module uses the original javascript and matlab toolkit (found at the github repository [usm.github.com](https://github.com/usm/usm.github.com.git)) as a template, however, we make notable deviations from the original algorithms in order to implement the generalized equations and to be more pythonic. "
    ]
   },
   {
@@ -86,9 +86,10 @@
     "$$\n",
     "\\begin{equation}\n",
     "H_2(USM) = -ln \\frac{1}{N^2} \\sum_{i=1}^{N} \\sum_{j=1}^{N} \\frac{1}{16\\pi^2\\sigma^4}\\exp\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)\n",
-    "\\tag{3.1}\n",
+    "\\tag{1.1}\n",
     "\\end{equation}\n",
     "$$\n",
+    "\n",
     "where $d_{ij}$ is the squared Euclidean distance between the USM coordinates $a_i$ and $a_j$ [3](#3).\n",
     "\n",
     "The next sections introduce the Renyi Continuous Entropy formula, Parzen kernel density formula, and the proof of the Renyi Continuous entropy of *d*-dimensional USM. "
@@ -99,21 +100,25 @@
    "id": "8b9efe68",
    "metadata": {},
    "source": [
-    "<a id='Section3.1'></a>\n",
+    "<a id='Section1.1'></a>\n",
     "### 1.1 Renyi Continuous Entropy\n",
     "Renyi entropy was instroduced as a generalization of Shannon entropy and includes an order parameter $\\alpha$ which in part, determines the weighted contribution of improbable events to the overall entropy measure. The limit of Renyi entropy $\\lim_{\\alpha \\to 1}H_{\\alpha}(X)$ is Shannon's original entropy measure. The formula for Renyi entropy of a continous probability density function $f(x)$ is:\n",
+    "\n",
     "$$\n",
+    "\\begin{equation}\n",
     "H_{\\alpha}(X) = \\frac{1}{1-\\alpha}\\ln\\int f^{\\alpha}(x)dx\n",
+    "\\end{equation}\n",
     "$$\n",
     "\n",
     "Vinga and Almeida utilize the Renyi quadratic ($\\alpha = 2$) continuous entropy formula for their USM entropy measure [3](#3) which is given here:\n",
     "<a id='Eq1.1.1'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "H_{\\alpha}(X) & = \\frac{1}{1-2}\\ln\\int f^{2}(x)dx \\\\\n",
     "& = -\\ln\\int f^{2}(x)dx\n",
-    "\\end{align}\n",
     "\\tag{1.1.1}\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
@@ -138,14 +143,18 @@
     "### 1.2 Parzen Window Kernel Density Estimation\n",
     "Vinga and Almeida employ a Parzen window method to estimate the probability density function fed to the Renyi continuous entropy formula. The Parzen window method takes a linear combination of smooth, continuous, differentiable weighting functions called the kernel function, one centered on each sample point $a_i$ in the observed sample. The output of this linear combination gives the estimated density function $\\hat{f}(x)$ of the distribution at all values of $x$. This is represented by the equation below where $x$ is the *d*-dimensional vector valued random variable in $\\mathbf{R}^d$, $a = \\left\\{a_1, a_2, \\dots, a_N\\right\\}$ is the sample of $x$ of size $N$, and $\\kappa()$ is the kernel weighting function applied to the distance between a value in $x$ and each $a_i$ in the sample $a$:\n",
     "$$\n",
+    "\\begin{equation}\n",
     "\\hat{f}(x;a) = \\frac{1}{N}\\sum_{i=1}{N}\\kappa(x-a_i)\n",
     "\\tag{1.2.1}\n",
+    "\\end{equation}\n",
     "$$\n",
     "\n",
     "Vinga and Almeida use the spherical symmetric *d*-dimensional Gaussian kernel $g_d$ with a fixed volume defined by the parameter $\\sigma^2$, the variance of the Gaussian distribution. Recall the general *d*-dimensional Gaussian distribution with mean $\\mu$ and covariance matrix $\\Sigma$ is defined by the equation:\n",
     "$$\n",
+    "\\begin{equation}\n",
     "g_d(x;\\mu,\\Sigma) = \\frac{1}{(2\\pi)^{d/2}|\\Sigma|^{1/2}}e^{\\left(-\\frac{1}{2}(x - \\mu)^T\\Sigma^{-1}(x-\\mu)\\right)}\n",
     "\\tag{1.2.2}\n",
+    "\\end{equation}\n",
     "$$\n",
     "\n",
     "where $x^T$ is the transpose vector of $x$ and $|\\Sigma|$ is the determinant of the covariance matrix. \n",
@@ -172,7 +181,7 @@
     "### 1.3 Equation of *d*-dimensional Renyi Entropy of USM\n",
     "Next we establish the equation for quadratice Renyi entropy of *d*-dimensional USM.\n",
     "\n",
-    "We first substitute the kernel density equation with spherical Gaussian kernel ([Eq. 1.2.3](#Eq1.2.3)] for $f(x)$ in the equation for continuous quadratic Renyi entropy ([Eq. 1.1](#Eq1.1.1)):\n",
+    "We first substitute the kernel density equation with spherical Gaussian kernel ([Eq. 1.2.3](#Eq1.2.3)] for $f(x)$ in the equation for continuous quadratic Renyi entropy ([Eq. 1.1](#Eq1.1)):\n",
     "$$\n",
     "\\begin{align}\n",
     "H_2(USM) & = -\\ln\\int\\left(\\frac{1}{N}\\sum_{i=1}^{N}\\frac{1}{(2\\pi)^{d/2}|\\sigma^2I_d|^{1/2}}e^{\\left(-\\frac{1}{2}(x - a_i)^T(\\sigma^2I_d)^{-1}(x-a_i)\\right)}\\right)^2dx \\\\\n",
@@ -239,8 +248,10 @@
     "It can be proved that, for $u$ and $v$ *d*-vectors, the product of the vector of the form $(u-v)$ with its transpose $(u-v)^T$ is equivalent to the squared Euclidean distance between $u$ and $v$ (proof omitted). Following the notation of [3](#3), let $d_{ij}$ represent the squared Euclidean distance between $a_i$ and $a_j$, then we rewrite the entropy equation as:\n",
     "<a id='Eq1.3.1'></a>\n",
     "$$\n",
+    "\\begin{equation}\n",
     "H_2(USM) = -\\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}\\frac{1}{(2\\pi^{1/2}\\sigma)^d}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\n",
     "\\tag{1.3.1}\n",
+    "\\end{equation}\n",
     "$$\n",
     "\n",
     "which we can see is congruous with [Eq. 1.1](#Eq1.1).  "
@@ -283,8 +294,10 @@
     "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_{ij}$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
     "<a id='Eq2.1.1'></a>\n",
     "$$\n",
+    "\\begin{equation}\n",
     "H_2(USM) = -\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]\n",
     "\\tag{2.1.1}\n",
+    "\\end{equation}\n",
     "$$\n"
    ]
   },
@@ -317,6 +330,15 @@
    "source": [
     "demo_files = Path.cwd()/ \"demo_files\"\n",
     "#demo_files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1424a400",
+   "metadata": {},
+   "source": [
+    "<a id='Ex2.2.1'></a>\n",
+    "#### Example 2.2.1"
    ]
   },
   {
@@ -420,14 +442,15 @@
     "$$\n",
     "From there we can split the larger fraction into a sum of three fractions with common denominator $\\ln\\sigma^2$ and by dealing with each individually we get,\n",
     "<a id='Eq3.1.1'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "m & = \\lim_{\\sigma^2 \\to +\\infty} \\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2} + \\frac{\\ln\\sigma^d}{\\ln\\sigma^2} - \\frac{\\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
     "& = \\frac{d\\ln\\sigma}{2\\ln\\sigma} - \\lim_{\\sigma^2 \\to +\\infty} \\frac{\\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
     "& =  \\frac{d}{2} - \\lim_{\\sigma^2 \\to +\\infty}\\frac{\\ln N^2}{\\ln\\sigma^2} \\\\\n",
-    "& =  \\frac{d}{2} \n",
-    "\\end{align}\n",
+    "& =  \\frac{d}{2}\n",
     "\\tag{3.1.1}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "since the limit of the first fraction as $\\sigma^2 \\to +\\infty$ is 0, as the numerator remains constant while the denominator grows infinitely. The second fraction is simplified to $d/2$ per the power rule and becomes a constant independent of $\\sigma^2$. The limit of the final fraction is also 0 since $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$ and $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, making the numerator independent of $\\sigma^2$ while the denominator tends toward infinity.\n",
@@ -435,6 +458,7 @@
     "\n",
     "And doing the same for $b$ we get \n",
     "<a id='Eq3.1.2'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "b &= \\lim_{\\sigma^2 \\to +\\infty} -\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} - \\frac{d}{2}\\ln\\sigma^2 \\\\\n",
@@ -443,24 +467,25 @@
     "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{\\sigma^d}{2^d\\pi^{d/2}\\sigma^d} + \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right)\\\\\n",
     "&= -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\lim_{\\sigma^2 \\to +\\infty} \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} \\\\\n",
     "&= \\ln2^d\\pi^{d/2} - \\ln\\frac{N^2}{N^2} \\\\\n",
-    "&= \\ln(2\\pi^{1/2})^d \\\\\n",
-    "\\end{align}\n",
+    "&= \\ln(2\\pi^{1/2})^d\n",
     "\\tag{3.1.2}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "since the $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$, $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, and $\\ln(1)=0$.\n",
     "\n",
     "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to +\\infty$ as\n",
     "<a id='Eq3.1.3'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "H_2^+ & = \\frac{d}{2}\\ln\\sigma^2 + \\ln(2\\pi^{\\frac{1}{2}})^d \\\\\n",
     "& = d\\ln\\sigma + d\\ln2\\pi^{\\frac{1}{2}} \\\\\n",
     "& = d\\left(\\ln\\sigma + \\ln2\\pi^{\\frac{1}{2}}\\right) \\\\\n",
     "& = d\\ln\\sigma2\\pi^{\\frac{1}{2}} \\\\\n",
-    "& = \\ln\\left(2\\sigma\\pi^{\\frac{1}{2}}\\right)^d \\\\\n",
-    "\\end{align}\n",
+    "& = \\ln\\left(2\\sigma\\pi^{\\frac{1}{2}}\\right)^d\n",
     "\\tag{3.1.3}\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
@@ -495,35 +520,38 @@
     "\n",
     "We solve for the coefficients, $m'$ and $b'$, of the asymptote equation $H_2^- = \\lim_{ln\\sigma^2 \\to 0^+} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$ using the equations given by Vinga and Almeida [3](#3) $m' = \\lim_{\\sigma^2 \\to 0^+} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b' = \\lim_{\\sigma^2 \\to 0^+} (H_2(\\sigma^2) - m' \\ln \\sigma^2)$.  \n",
     "\n",
-    "For $m'$ we begin the same way as for $m$, except using the simplified entropy equation [Eq. 2.1.1](#Eq2.1.1) an alternate form of [Eq. 1.3.1](#Eq1.3.1) which we derived in [Section 2.1](#Section2.1). We then apply the same simplifications applied in the derivation of [Eq. 3.1.1](#Eq3.1.1) and the fact that $\\lim_{x \\to 0^+}\\ln(x) = -\\infty$ and proceed, \n",
+    "For $m'$ we begin the same way as for $m$, except using the simplified entropy equation [Eq. 2.1.1](#Eq2.1.1) an alternate form of [Eq. 1.3.1](#Eq1.3.1) which we derived in [Section 2.1](#Section2.1). We then apply the same simplifications applied in the derivation of [Eq. 3.1.1](#Eq3.1.1) and the fact that $\\lim_{x \\to 0^+}\\ln(x) = -\\infty$ and proceed,  \n",
     "<a id='Eq3.2.1'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "m' & = \\lim_{\\sigma^2 \\to 0^+} \\frac{-\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]}{\\ln\\sigma^2} \\\\\n",
     "& = \\frac{d}{2} + \\lim_{\\sigma^2 \\to 0^+} \\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2} - \\frac{\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]}{\\ln\\sigma^2} \\\\\n",
     "& = \\frac{d}{2} - \\lim_{\\sigma^2 \\to 0^+} \\frac{N}{\\ln\\sigma^2} \\\\\n",
-    "& = \\frac{d}{2} \\\\\n",
-    "\\end{align}\n",
+    "& = \\frac{d}{2}\n",
     "\\tag{3.2.1}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "since $\\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2}$ will tend toward $-0$ as $\\sigma^2 \\to 0^+$ and  $\\lim_{\\sigma^2 \\to 0^+} \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 0$ since $\\lim_{\\sigma^2 \\to 0^+} -\\frac{1}{4\\sigma^2}d_{ij} = -\\infty$.\n",
     "\n",
     "For $b'$ we follow the same procedure using [Eq. 2.1.1](#Eq2.1.1) and the simplifications applied for [Eq. 3.1.2](#Eq3.1.2):\n",
     "<a id='Eq3.2.2'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "b' & = \\lim_{\\sigma^2 \\to 0^+} -\\ln\\frac{1}{N^2\\left(2\\pi^{1/2}\\sigma\\right)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right] - \\frac{d}{2}\\ln\\sigma^2 \\\\\n",
     "& = -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\lim_{\\sigma^2 \\to 0^+} \\ln\\frac{1}{N^2}\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right] \\\\\n",
     "& = -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\ln\\frac{N}{N^2} \\\\\n",
     "& = \\ln\\left(2\\pi^{1/2}\\right)^d + \\ln\\frac{N^2}{N} \\\\\n",
-    "& = d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
-    "\\end{align}\n",
+    "& = d\\ln2\\pi^{1/2} + \\ln N\n",
     "\\tag{3.2.2}\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
-    "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to 0^+$ as\n",
+    "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to 0^+$ as  \n",
     "<a id='Eq3.2.3'></a>\n",
+    "\n",
     "$$\n",
     "\\begin{align}\n",
     "H_2^- & = \\frac{d}{2}\\ln\\sigma^2 + d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
@@ -531,9 +559,9 @@
     "& = d\\left(\\ln\\sigma + \\ln2\\pi^{1/2}\\right) + \\ln N \\\\\n",
     "& = d\\left(\\ln\\sigma2\\pi^{1/2}\\right) + \\ln N \\\\\n",
     "& = \\ln\\left(\\sigma2\\pi^{1/2}\\right)^d + \\ln N \\\\\n",
-    "& = \\ln N\\left(2\\sigma\\pi^{1/2}\\right)^d \\\\\n",
-    "\\end{align}\n",
+    "& = \\ln N\\left(2\\sigma\\pi^{1/2}\\right)^d\n",
     "\\tag{3.2.3}\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
