Debug headers in demo_usm_entropy

--- a/doc/demo_usm_entropy.ipynb
+++ b/doc/demo_usm_entropy.ipynb
@@ -19,8 +19,9 @@
     "    - [Section 1.3](#Section1.3) Equation of *d*-dimensional Renyi Entropy of USM\n",
     "* [Section 2](#Section2) Demo of usm_entropy module\n",
     "    - [Section 2.1](#Section2.1) Simplification of Entropy Equation\n",
-    "* [Section 3](#Section3)\n",
-    "    - [Section 3.1](#Section3.1) "
+    "* [Section 3](#Section3) Asymptotic Behavior of Renyi Entropy by Natural Log of Kernel Variance\n",
+    "    - [Section 3.1](#Section3.1) Asymptote for $\\ln\\sigma^2 \\to +\\infty$\n",
+    "    - [Section 3.2](#Section3.2) Asymptote for $\\ln\\sigma^2 \\to 0^+$"
    ]
   },
   {
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1424a400",
+   "id": "60843931",
    "metadata": {},
    "source": [
     "<a id='Ex2.2.1'></a>\n",
@@ -427,7 +428,7 @@
    "metadata": {},
    "source": [
     "<a id='Section3.1'></a>\n",
-    "### 3.1 Asymptote for $\\ln\\sigma^2 \\to +\\infty$\n",
+    "## 3.1 Asymptote for $\\ln\\sigma^2 \\to +\\infty$\n",
     "We solve for the coefficients, $m$ and $b$, of the asymptote for $ln\\sigma^2 \\to +\\infty$ using the equations given by Vinga and Almeida [3](#3) $m = \\lim_{\\sigma^2 \\to +\\infty} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b = \\lim_{\\sigma^2 \\to +\\infty} (H_2(\\sigma^2) - m \\ln \\sigma^2)$. \n",
     "\n",
     "We begin with $m$ and substitute [Eq. 1.3.1](#Eq1.3.1) for $H_2(\\sigma^2)$ in the formula. We then simplify the equation by distributing the exponent *d* in the numerator, splitting the numerator into a sum of three log terms per the product rule, then distributing the negative term across the summation, and transforming the negative log of the fractions into the log of the reciprocals per the rule of cologarithms. \n",
@@ -515,7 +516,7 @@
    "metadata": {},
    "source": [
     "<a id='Section3.2'></a>\n",
-    "### 3.2 Asymptote for $\\ln\\sigma^2 \\to 0^+$\n",
+    "## 3.2 Asymptote for $\\ln\\sigma^2 \\to 0^+$\n",
     "Because $H_2 = H_2(ln\\sigma^2)$ is a logarithmic equation it is undefined for $\\sigma^2 < 0$. Therefore we do not have to worry about the $\\lim_{\\sigma^2 \\to -\\infty}$ of the equation but only need to solve for $\\lim_{\\sigma^2 \\to 0^+}$.  \n",
     "\n",
     "We solve for the coefficients, $m'$ and $b'$, of the asymptote equation $H_2^- = \\lim_{ln\\sigma^2 \\to 0^+} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$ using the equations given by Vinga and Almeida [3](#3) $m' = \\lim_{\\sigma^2 \\to 0^+} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b' = \\lim_{\\sigma^2 \\to 0^+} (H_2(\\sigma^2) - m' \\ln \\sigma^2)$.  \n",
